@startuml
'https://plantuml.com/class-diagram

hide empty members

package Model {
    class Board
    class Player
}

class GaloViewModel <<MutableState>> {
    helpOpen: Boolean
}
GaloViewModel *- Board : board
GaloViewModel *-- StatusInfo: status

class StatusInfo {
    label: String
}
StatusInfo *-- "0..1" Player : player

@enduml